bugfix refactoring